# transformer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/transformer/: attention.py  decoder.py  encoder.py  ffn.py  positional_encoding.py  residual_connection.py  transformer.py
src/transformer/common/: __init__.py  base_model.py  functions.py  layers.py  np.py  optimizer.py  random_choice.py  trainer.py  util.py
src/transformer/config/: __init__.py  config.py
tests/date/: data.py  main.py  params.py  vis.py
tests/qc/: constants.py  main.py  model.py  params.py  utils.py
