[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer"
description = "Transformer made with pure numpy"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = []
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "transformer._version.version" }

[tool.setuptools_scm]
write_to = "src/transformer/_version.py"

[tool.setuptools]
package-dir = { "" = "src" }

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]